// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBarOptions should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center pr-8 my-1"
    data-testid="SearchBarOptions"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <span
          class="flex font-semibold cursor-pointer select-none"
        >
          Type
          <svg
            class="inline-block ml-2 w-2 text-black"
          >
            chevron-down.svg
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBarOptions should render with selected option 1`] = `
<DocumentFragment>
  <div
    class="flex items-center pr-8 my-1"
    data-testid="SearchBarOptions"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <span
          class="flex font-semibold cursor-pointer select-none"
        >
          TESTING LABEL
          <svg
            class="inline-block ml-2 w-2 text-black"
          >
            chevron-down.svg
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
